Fix button text alignment when applied to <a> elements

--- a/packages/core/src/components/Button/Button.scss
+++ b/packages/core/src/components/Button/Button.scss
@@ -33,6 +33,7 @@ Style guide: components.button
   font-weight: $font-bold;
   line-height: $reset-line-height;
   padding: $spacer-2;
+  text-align: center;
   text-decoration: none;
 
   &:focus,
